--- a/src/components/SubPageCard.astro
+++ b/src/components/SubPageCard.astro
@@ -3,6 +3,7 @@ import { bgColorMap, textColorMap } from "../statics"
 
 interface SubPageCardProps {
   title: string
+  summary: string
   slug: string
   index: number
   bgColor: string
@@ -12,13 +13,78 @@ interface SubPageCardProps {
   textPosition: "left" | "right" | "top" | "bottom" | "text-only"
 }
 
-const mpcProps = Astro.props.subPageCardProps as SubPageCardProps;
+const props = Astro.props.subPageCardProps as SubPageCardProps;
 const html: string | null = Astro.props.html
 
-const cardClassTextRight = `card glass ${bgColorMap.get(mpcProps.bgColor)} ${textColorMap.get(mpcProps.textColor)} lg:card-side shadow-xl p-6`
-const cardClassTextLeft = `card ${bgColorMap.get(mpcProps.bgColor)} ${textColorMap.get(mpcProps.textColor)} lg:card-side shadow-xl p-6`
----
+let bgColor = bgColorMap.get(props.bgColor)
+let textColor = textColorMap.get(props.textColor)
 
-<div>
-    lol
-</div>
+const cardClassTB = `card shadow-xl p-6 ${bgColor} ${textColor}`
+const cardClassLR = `card lg:card-side shadow-xl p-6 ${bgColor} ${textColor}`
+
+const articleClass = `prose md:prose-base lg:prose-lg ${textColor}`
+const articleClassFullWidth = `prose max-w-none md:prose-base lg:prose-lg ${textColor}`
+const articleClassSmaller = `prose md:prose-sm lg:prose-base ${textColor}`
+---
+{
+  props.textPosition === "left" &&
+    <div class={cardClassLR}>
+      <div class="card-body">
+        <h1 id={props.slug} class="card-title text-4xl mb-4 anchor"><a class="anchor-link" href={`#${props.slug}`}>#</a>{props.title}</h2>
+        <h2 class="card-title text-2xl mb-2">{props.summary}</h2>
+        {html && <article class={articleClassSmaller} set:html={html}></article>}
+      </div>
+      <figure>
+        <img src={props.image}/>
+      </figure>
+    </div>
+}
+{
+  props.textPosition === "right" &&
+    <div class={cardClassLR}>
+      <figure>
+        <img src={props.image}/>
+      </figure>
+      <div class="card-body">
+        <h1 id={props.slug} class="card-title text-4xl mb-4 anchor"><a class="anchor-link" href={`#${props.slug}`}>#</a>{props.title}</h2>
+        <h2 class="card-title text-2xl mb-2">{props.summary}</h2>
+        {html && <article class={articleClassSmaller} set:html={html}></article>}
+      </div>
+    </div>
+}
+{
+  props.textPosition === "top" &&
+    <div class={cardClassTB}>
+      <div class="card-body">
+        <h1 id={props.slug} class="card-title text-4xl mb-4 anchor"><a class="anchor-link" href={`#${props.slug}`}>#</a>{props.title}</h2>
+        <h2 class="card-title text-2xl mb-2">{props.summary}</h2>
+        {html && <article class={articleClassFullWidth} set:html={html}></article>}
+      </div>
+      <figure>
+        <img src={props.image}/>
+      </figure>
+    </div>
+}
+{
+    props.textPosition === "bottom" &&
+    <div class={cardClassTB}>
+      <figure>
+        <img src={props.image}/>
+      </figure>
+      <div class="card-body">
+        <h1 id={props.slug} class="card-title text-4xl mb-4 anchor"><a class="anchor-link" href={`#${props.slug}`}>#</a>{props.title}</h2>
+        <h2 class="card-title text-2xl mb-2">{props.summary}</h2>
+        {html && <article class={articleClassFullWidth} set:html={html}></article>}
+      </div>
+    </div>
+}
+{
+  props.textPosition === "text-only" &&
+    <div class={cardClassTB}>
+      <div class="card-body">
+        <h1 id={props.slug} class="card-title text-4xl mb-4 anchor"><a class="anchor-link" href={`#${props.slug}`}>#</a>{props.title}</h2>
+        <h2 class="card-title text-2xl mb-2">{props.summary}</h2>
+        {html && <article class={articleClassFullWidth} set:html={html}></article>}
+      </div>
+    </div>
+}
