--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,7 +23,7 @@ const sectionLinks =
     slug: file.frontmatter.slug
   }))
 ---
-<Layout title="Welcome to Astro.">
+<Layout title="DataPLANT - About">
   <div class="flex flex-col flex-grow place-content-center">
     <SubPageHero subPageHeroProps={hero.frontmatter} sectionLinks={sectionLinks} html={hero.compiledContent()}></SubPageHero>
     <div class="mx-auto w-full max-w-7xl pb-10 lg:py-12 lg:px-8">
