--- a/src/components/Publication.astro
+++ b/src/components/Publication.astro
@@ -19,7 +19,7 @@ const props = Astro.props.bibtex as PublicationProps;
 const isOpenAccess = props.note ? props.note === "open access" : false;
 const link = props.doi ? (props.doi ? props.doi :  "#") : "#";
 
-const cardClass = `card shadow-xl p-6 rounded-box grid place-items-center ${bgColor}`;
+const cardClass = `card shadow-xl p-6 rounded-box grid place-items-center mb-2 ${bgColor}`;
 ---
 <div class={cardClass}>
   <div class="card-body">
@@ -30,7 +30,7 @@ const cardClass = `card shadow-xl p-6 rounded-box grid place-items-center ${bgCo
       <details>
         <summary>Abstract</summary>
         <p>{props.abstract}</p>
-    </details>
+      </details>
     }
     <div class="flex gap-2">
       {isOpenAccess && <div class="badge badge-lg bg-olive">Open Access</div>}
