--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -28,6 +28,7 @@ const groupedPubs : [string, Entry[]][] =
   .sort(([a], [b]) => 
     Number(a) - Number(b)
   )
+  .reverse()
 
 console.log(bibtex_files);
 console.log(bibtex[1]);
@@ -68,7 +69,7 @@ const heroSectionLinks: SectionLink[] = [
       <div class="space-y-24 sm:px-6 lg:col-span-12 lg:px-0">
         <div class="card shadow-xl p-6 rounded-box grid place-items-center">
           <div class="card-body">
-            <h1 id="highlighted-publications" class="card-title text-darkblue text-4xl mb-4 anchor"><a class="anchor-link" href="#highlighted-publications">Highlighted Publications</a></h2>
+            <h1 id="highlighted-publications" class="card-title text-darkblue text-4xl mb-4 anchor"><a class="anchor-link" href="#highlighted-publications">Highlighted Publications ({highlightedPubs.length})</a></h2>
             {
               highlightedPubs
               .map((pub) => (
@@ -80,7 +81,7 @@ const heroSectionLinks: SectionLink[] = [
         <div class="divider"></div>
         <div class="card shadow-xl p-6 rounded-box grid place-items-center">
           <div class="card-body">
-            <h1 id="all-publications" class="card-title text-4xl mb-4 anchor"><a class="anchor-link" href="#all-publications">All Publications</a></h2>
+            <h1 id="all-publications" class="card-title text-4xl mb-4 anchor"><a class="anchor-link" href="#all-publications">All Publications ({bibJSON.length})</a></h2>
               {
                 groupedPubs
                 .map(([year, publications]) => (
