--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -1,8 +1,7 @@
 ---
-import type { Content as Props } from '~/types';
 import Headline from '../ui/Headline.astro';
 import WidgetWrapper from '../ui/WidgetWrapper.astro';
-import Image from '~/components/common/Image.astro';
+import {Image} from 'astro:assets'
 import Button from '~/components/ui/Button.astro';
 import ItemGrid from '../ui/ItemGrid.astro';
 
@@ -14,7 +13,7 @@ const {
   callToAction,
   items = [],
   columns,
-  image = await Astro.slots.render('image'),
+  image,
   isReversed = false,
   isAfterContent = false,
 
@@ -38,14 +37,13 @@ const {
     classes={{
       container: 'max-w-xl sm:mx-auto lg:max-w-2xl',
       title: 'text-4xl md:text-5xl font-bold tracking-tighter mb-4 font-heading',
-      subtitle: 'max-w-3xl mx-auto sm:text-center text-xl text-muted dark:text-slate-400',
+      subtitle: 'max-w-3xl mx-auto sm:text-center text-xl text-muted',
     }}
   />
   <div class="mx-auto max-w-7xl p-4 md:px-8">
-    <div class={`md:flex ${isReversed ? 'md:flex-row-reverse' : ''} md:gap-16`}>
+    <div class={`md:flex ${isReversed ? 'md:flex-row-reverse' : ''} md:gap-16 justify-center`}>
       <div class="md:basis-1/2 self-center">
-        {content && <div class="mb-12 text-lg dark:text-slate-400" set:html={content} />}
-
+        {content && <div class="mb-12 text-lg" set:html={content} />}
         {
           callToAction && (
             <div class="mt-[-40px] mb-8 text-primary">
@@ -61,34 +59,38 @@ const {
           classes={{
             container: `gap-y-4 md:gap-y-8`,
             panel: 'max-w-none',
-            title: 'text-lg font-medium leading-6 dark:text-white ml-2 rtl:ml-0 rtl:mr-2',
-            description: 'text-muted dark:text-slate-400 ml-2 rtl:ml-0 rtl:mr-2',
-            icon: 'flex h-7 w-7 items-center justify-center rounded-full bg-green-600 dark:bg-green-700 text-gray-50 p-1',
-            action: 'text-lg font-medium leading-6 dark:text-white ml-2 rtl:ml-0 rtl:mr-2',
+            title: 'text-lg font-medium leading-6 ml-2 rtl:ml-0 rtl:mr-2',
+            description: 'text-muted ml-2 rtl:ml-0 rtl:mr-2',
+            icon: 'flex h-7 w-7 items-center justify-center rounded-full bg-green-600 text-gray-50 p-1',
+            action: 'text-lg font-medium leading-6 ml-2 rtl:ml-0 rtl:mr-2',
           }}
         />
       </div>
-      <div aria-hidden="true" class="mt-10 md:mt-0 md:basis-1/2">
-        {
-          image && (
-            <div class="relative m-auto max-w-4xl">
-              {typeof image === 'string' ? (
-                <Fragment set:html={image} />
-              ) : (
-                <Image
-                  class="mx-auto w-full rounded-lg bg-gray-500 shadow-lg"
-                  width={500}
-                  height={500}
-                  widths={[400, 768]}
-                  sizes="(max-width: 768px) 100vw, 432px"
-                  layout="responsive"
-                  {...image}
-                />
-              )}
-            </div>
-          )
-        }
-      </div>
+      {
+        image && (
+          <div aria-hidden="true" class="mt-10 md:mt-0 md:basis-1/2">
+            {
+              
+                <div class="relative m-auto max-w-4xl">
+                  {typeof image === 'string' ? (
+                    <Fragment set:html={image} />
+                  ) : (
+                    <Image
+                      src={image}
+                      class="mx-auto w-full rounded-lg bg-gray-500 shadow-lg"
+                      width={500}
+                      height={500}
+                      widths={[400, 768]}
+                      sizes="(max-width: 768px) 100vw, 432px"
+                      alt={title}
+                    />
+    
+                  )}
+                </div>
+              
+            }
+          </div>
+        )}
     </div>
   </div>
 </WidgetWrapper>
