update call to action header font

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const files : MarkdownInstance<Record<string,any>> [] = await Astro.glob('../con
       ]}
     >
       <Fragment slot="title">
-        DataPLANT
+        <span style='font-family: "Shadows Into Light Two", cursive;'>DataPLANT</span>
       </Fragment>
 
       <Fragment slot="subtitle">
