fix banner typo

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -9,7 +9,7 @@ height="2191" -->
 <!-- look for "upper-left" to find the scaling link elements in the SVG -->
 
 <svg
-  class="hidden md:block sm:max-w-[90%] md:max-w-[80%] lg:max-w-[75%] xl:max-w-[65%] overflow-visible"
+  class="hidden md:block sm:max-w-[90%] md:max-w-[90%] lg:max-w-[80%] xl:max-w-[65%] overflow-visible"
   xmlns="http://www.w3.org/2000/svg"
   xmlns:xlink="http://www.w3.org/1999/xlink"
   xml:space="preserve"
@@ -639,7 +639,7 @@ height="2191" -->
       font-family="Calibri,Calibri_MSFontService,sans-serif"
       font-weight="400"
       font-size="110"
-      transform="matrix(1 0 0 1 2180 1372)">@nfdi4plant</text
+      transform="matrix(1 0 0 1 2180 1372)">@nfdi4plants</text
     >
     <a 
       id="upper-left" 
